Fix #156, resolve some formatting issues on mobile

--- a/src/global.scss
+++ b/src/global.scss
@@ -35,7 +35,8 @@ body {
   z-index: 1000;
   background-color: rgba(255, 255, 255, .9);
   margin: 0;
-  padding: .5ex;
+  padding: 1vh;
+  font-size: 3vh;
 }
 
 /* Override zebra table from Picnic */
